Update Salaries and Experience-checkpoint.ipynb

--- a/Salaries and Experience-checkpoint.ipynb
+++ b/Salaries and Experience-checkpoint.ipynb
@@ -59,7 +59,7 @@
     {
      "data": {
       "text/plain": [
-       "'Tesing from laptop'"
+       "'Hi team'"
       ]
      },
      "execution_count": 1,
@@ -68,7 +68,7 @@
     }
    ],
    "source": [
-    "\"Tesing from desktop\""
+    "\"Hi team\""
    ]
   }
  ],
@@ -88,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
