--- a/Gradient Descent.ipynb
+++ b/Gradient Descent.ipynb
@@ -166,10 +166,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def negate(f):\n",
+    "    return lambda *args, **kwargs: -f(*args,**kwargs)\n",
+    "\n",
+    "def negate_all(f):\n",
+    "    return lambda *args,**kwargs: [-y for y in f(*args,**kwargs)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def maximize_stochastic(target_fn,gradient_fn,x,y,theta_0,alpha_0=0.01):\n",
+    "    return minimize_stochastic(negate(target_fn),\n",
+    "                              negate_all(gradient_fn),\n",
+    "                              x,y,theta_0,alpha_0)"
+   ]
   },
   {
    "cell_type": "code",
