--- a/Getting Data.ipynb
+++ b/Getting Data.ipynb
@@ -256,6 +256,260 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from twython import Twython"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CONSUMER_KEY = 'nHmxXWHNdl7HQqoxBsos3WU5D'\n",
+    "CONSUMER_SECRET = 'VqXzXU6BqR1HKNHjPq9VAvoex7qI1xuJHyh3uVNJFwZiy9wVSY'\n",
+    "ACCESS_TOKEN = '1084990784162521088-VQiEswpxWclrwD22kZo3q7nKRV2O2J'\n",
+    "ACCESS_TOKEN_SECRET = '5sydqd69fQWwqGOMHvlGhmI3QLCK7pZRMjYaVJL2wrSdX'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twitter = Twython(CONSUMER_KEY, CONSUMER_SECRET)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ahmedjr_16 : 45 Best #DataScience Courses For #DataScientist\n",
+      "\n",
+      "#AI #ArtificialIntelligence #BI #MachineLearning… https://t.co/Y3fdDWkzHK\n",
+      "ItunuTaylor : RT @MomentsWithBren: arise: 2019 Data Science Internship\n",
+      "\n",
+      "Start your data science career with Paylater! The arise program provides an excel…\n",
+      "Visiola_Fdn : RT @paylaterNG: We're happy to announce the Arise 2019 Data Science Internship by Paylater 🎉.\n",
+      "\n",
+      "If you want to advance your skills working o…\n",
+      "drnjshelton : RT @JulieGeorgePH: interview date for Public Health Data Science fixed term post now confirmed for 23rd January. Please get in touch if you…\n",
+      "azharsketch : RT @WeAreRLadies: Since I'm a complete pack rat, I'll now share with you a bunch of great, free online books to help learn #rstats.  \n",
+      "1) Th…\n",
+      "hellopurpleic : Ten Myths About Data Science https://t.co/pUOSkwWSok\n",
+      "GengoIt : RT @SASGreece: Discover more about how Machine Learning is transforming financial services in Gengo's latest interview with SAS' Head of Da…\n",
+      "TechnoJeder : RT @anitayorker: Can Artificial Intelligence replace Data Scientists? - Data Science Central https://t.co/gD8B82iJ9D, see more https://t.co…\n",
+      "AstroLabsME : 🚦A hands-on workshop in Deep Learning, Machine Learning, AI, Data Science, and so much more! 🚀🚀🚀No abstract concept… https://t.co/xzRiuMwJ4I\n",
+      "anitayorker : Can Artificial Intelligence replace Data Scientists? - Data Science Central https://t.co/gD8B82iJ9D, see more https://t.co/L1rR6e0Ija\n",
+      "ColinQuirke : @JoeSmyth10 @sarahcareyIRL Finland are preparing for the future - https://t.co/jmyv3dFafw\n",
+      "JacquiMarshall2 : RT @xtaldave: Important Data Science thread! https://t.co/7Zypa1ELCH\n",
+      "eolutosin : arise: 2019 Data Science Internship | https://t.co/BUE7BOtOye https://t.co/1T5xG41hb2\n",
+      "Steven_Ramage : @edzerpebesma and @RogerBivand are writing a book on new stuff in #rspatial, called \"Spatial Data Science\". The fir… https://t.co/6ncwRIjpAZ\n",
+      "Nova_Quality : No busques más, en @Nova_Quality queremos contar con un Consultor Experto en DATA SCIENCE. Envíanos tu currículum a… https://t.co/OayYa1nMXU\n"
+     ]
+    }
+   ],
+   "source": [
+    "for status in twitter.search(q='\"data science\"')['statuses']:\n",
+    "    user = status['user']['screen_name']\n",
+    "    text = status['text']\n",
+    "    print (user, ':', text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from twython import TwythonStreamer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweets = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyStreamer(TwythonStreamer):\n",
+    "    def on_success(self, data):\n",
+    "        if data['lang'] == 'en':\n",
+    "            tweets.append(data)\n",
+    "            print ('received tweet #', len(tweets))\n",
+    "            \n",
+    "        if len(tweets) >= 100:\n",
+    "            self.disconnect()\n",
+    "        \n",
+    "    def on_error(self, status_code, data):\n",
+    "        print (status_code, data)\n",
+    "        self.disconnect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stream = MyStreamer(CONSUMER_KEY, CONSUMER_SECRET, ACCESS_TOKEN, ACCESS_TOKEN_SECRET)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "received tweet # 1\n",
+      "received tweet # 2\n",
+      "received tweet # 3\n",
+      "received tweet # 4\n",
+      "received tweet # 5\n",
+      "received tweet # 6\n",
+      "received tweet # 7\n",
+      "received tweet # 8\n",
+      "received tweet # 9\n",
+      "received tweet # 10\n",
+      "received tweet # 11\n",
+      "received tweet # 12\n",
+      "received tweet # 13\n",
+      "received tweet # 14\n",
+      "received tweet # 15\n",
+      "received tweet # 16\n",
+      "received tweet # 17\n",
+      "received tweet # 18\n",
+      "received tweet # 19\n",
+      "received tweet # 20\n",
+      "received tweet # 21\n",
+      "received tweet # 22\n",
+      "received tweet # 23\n",
+      "received tweet # 24\n",
+      "received tweet # 25\n",
+      "received tweet # 26\n",
+      "received tweet # 27\n",
+      "received tweet # 28\n",
+      "received tweet # 29\n",
+      "received tweet # 30\n",
+      "received tweet # 31\n",
+      "received tweet # 32\n",
+      "received tweet # 33\n",
+      "received tweet # 34\n",
+      "received tweet # 35\n",
+      "received tweet # 36\n",
+      "received tweet # 37\n",
+      "received tweet # 38\n",
+      "received tweet # 39\n",
+      "received tweet # 40\n",
+      "received tweet # 41\n",
+      "received tweet # 42\n",
+      "received tweet # 43\n",
+      "received tweet # 44\n",
+      "received tweet # 45\n",
+      "received tweet # 46\n",
+      "received tweet # 47\n",
+      "received tweet # 48\n",
+      "received tweet # 49\n",
+      "received tweet # 50\n",
+      "received tweet # 51\n",
+      "received tweet # 52\n",
+      "received tweet # 53\n",
+      "received tweet # 54\n",
+      "received tweet # 55\n",
+      "received tweet # 56\n",
+      "received tweet # 57\n",
+      "received tweet # 58\n",
+      "received tweet # 59\n",
+      "received tweet # 60\n",
+      "received tweet # 61\n",
+      "received tweet # 62\n",
+      "received tweet # 63\n",
+      "received tweet # 64\n",
+      "received tweet # 65\n",
+      "received tweet # 66\n",
+      "received tweet # 67\n",
+      "received tweet # 68\n",
+      "received tweet # 69\n",
+      "received tweet # 70\n",
+      "received tweet # 71\n",
+      "received tweet # 72\n",
+      "received tweet # 73\n",
+      "received tweet # 74\n",
+      "received tweet # 75\n",
+      "received tweet # 76\n",
+      "received tweet # 77\n",
+      "received tweet # 78\n",
+      "received tweet # 79\n",
+      "received tweet # 80\n",
+      "received tweet # 81\n",
+      "received tweet # 82\n",
+      "received tweet # 83\n",
+      "received tweet # 84\n",
+      "received tweet # 85\n",
+      "received tweet # 86\n",
+      "received tweet # 87\n",
+      "received tweet # 88\n",
+      "received tweet # 89\n",
+      "received tweet # 90\n",
+      "received tweet # 91\n",
+      "received tweet # 92\n",
+      "received tweet # 93\n",
+      "received tweet # 94\n",
+      "received tweet # 95\n",
+      "received tweet # 96\n",
+      "received tweet # 97\n",
+      "received tweet # 98\n",
+      "received tweet # 99\n",
+      "received tweet # 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "stream.statuses.filter(track='data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('data', 4), ('ai', 3), ('brexit', 3), ('tech', 3), ('blockchain', 2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "top_hashtags = Counter(hashtag['text'].lower()\n",
+    "                      for tweet in tweets\n",
+    "                      for hashtag in tweet['entities']['hashtags'])\n",
+    "print (top_hashtags.most_common(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
