--- a/Working with Data.ipynb
+++ b/Working with Data.ipynb
@@ -283,6 +283,156 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'datetime' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-39-a83742e3e2b8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m data = [\n\u001b[0;32m      2\u001b[0m     {'closing_price':102.06,\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[1;34m'date'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2014\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m29\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     'symbol':'AAPL'}\n\u001b[0;32m      5\u001b[0m ]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'datetime' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "data = [\n",
+    "    {'closing_price':102.06,\n",
+    "    'date': datetime.datetime(2014,8,29,0,0),\n",
+    "    'symbol':'AAPL'}\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_row(input_row,parsers):\n",
+    "    return [try_or_none(parser)(value) if parser is not None else value\n",
+    "           for value,parser in zip(input_row,parsers)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_rows_with(reader, parsers):\n",
+    "    for row in reader:\n",
+    "        yield parse_row(row,parsers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def try_or_none(f):\n",
+    "    def f_or_none(x):\n",
+    "        try: return f(x)\n",
+    "        except: return None\n",
+    "    return f_or_none"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dateutil.parser\n",
+    "import math, random, csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data =[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[None, 'AAPL', 90.91]\n",
+      "[datetime.datetime(2014, 6, 20, 0, 0), 'MSFT', 41.68]\n",
+      "[datetime.datetime(3014, 6, 20, 0, 0), 'FB', 64.5]\n",
+      "[datetime.datetime(2014, 6, 19, 0, 0), 'AAPL', 91.86]\n",
+      "[datetime.datetime(2014, 6, 19, 0, 0), 'MSFT', None]\n",
+      "[datetime.datetime(2014, 6, 19, 0, 0), 'FB', 64.34]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"C://Users//Danniel//Documents//GitHub//DataScience_study//comma_delimited_stock_prices.csv\", 'r',) as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    for line in parse_rows_with(reader,[dateutil.parser.parse, None, float]):\n",
+    "        data.append(line)\n",
+    "        print (line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[None, 'AAPL', 90.91]\n",
+      "[datetime.datetime(2014, 6, 19, 0, 0), 'MSFT', None]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in data:\n",
+    "    if any(x is None for x in row):\n",
+    "        print (row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[None, 'AAPL', 90.91],\n",
+       " [datetime.datetime(2014, 6, 20, 0, 0), 'MSFT', 41.68],\n",
+       " [datetime.datetime(3014, 6, 20, 0, 0), 'FB', 64.5],\n",
+       " [datetime.datetime(2014, 6, 19, 0, 0), 'AAPL', 91.86],\n",
+       " [datetime.datetime(2014, 6, 19, 0, 0), 'MSFT', None],\n",
+       " [datetime.datetime(2014, 6, 19, 0, 0), 'FB', 64.34]]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -305,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
