--- a/Decision Tree.ipynb
+++ b/Decision Tree.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
-    "from collections import Counter, defaultdict"
+    "from collections import Counter, defaultdict\n",
+    "from functools import partial"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +56,7 @@
     "        ({'level':'Senior','lang':'Java','tweets':'no','phd':'no'},   False),\n",
     "        ({'level':'Senior','lang':'Java','tweets':'no','phd':'yes'},  False),\n",
     "        ({'level':'Mid','lang':'Python','tweets':'no','phd':'no'},     True),\n",
-    "        ({'level':'Junior','lang':'Python1`tweets':'no','phd':'no'},  True),\n",
+    "        ({'level':'Junior','lang':'Python1', 'tweets':'no','phd':'no'},  True),\n",
     "        ({'level':'Junior','lang':'R','tweets':'yes','phd':'no'},      True),\n",
     "        ({'level':'Junior','lang':'R','tweets':'yes','phd':'yes'},    False),\n",
     "        ({'level':'Mid','lang':'R','tweets':'yes','phd':'yes'},        True),\n",
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -94,27 +95,69 @@
     {
      "data": {
       "text/plain": [
-       "dict_values([[({'level': 'Senior', 'lang': 'Java', 'tweets': 'no', 'phd': 'no'}, False), ({'level': 'Senior', 'lang': 'Java', 'tweets': 'no', 'phd': 'yes'}, False), ({'level': 'Senior', 'lang': 'Python', 'tweets': 'no', 'phd': 'no'}, False), ({'level': 'Senior', 'lang': 'R', 'tweets': 'yes', 'phd': 'no'}, True), ({'level': 'Senior', 'lang': 'Python', 'tweets': 'yes', 'phd': 'yes'}, True)], [({'level': 'Mid', 'lang': 'Python', 'tweets': 'no', 'phd': 'no'}, True), ({'level': 'Mid', 'lang': 'R', 'tweets': 'yes', 'phd': 'yes'}, True), ({'level': 'Mid', 'lang': 'Python', 'tweets': 'no', 'phd': 'yes'}, True), ({'level': 'Mid', 'lang': 'Java', 'tweets': 'yes', 'phd': 'no'}, True)], [({'level': 'Junior', 'lang': 'Python', 'tweets': 'no', 'phd': 'no'}, True), ({'level': 'Junior', 'lang': 'R', 'tweets': 'yes', 'phd': 'no'}, True), ({'level': 'Junior', 'lang': 'R', 'tweets': 'yes', 'phd': 'yes'}, False), ({'level': 'Junior', 'lang': 'Python', 'tweets': 'yes', 'phd': 'no'}, True), ({'level': 'Junior', 'lang': 'Python', 'tweets': 'no', 'phd': 'yes'}, False)]])"
+       "[({'level': 'Senior', 'lang': 'Java', 'tweets': 'no', 'phd': 'no'}, False),\n",
+       " ({'level': 'Senior', 'lang': 'Java', 'tweets': 'no', 'phd': 'yes'}, False),\n",
+       " ({'level': 'Mid', 'lang': 'Java', 'tweets': 'yes', 'phd': 'no'}, True)]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "partition_by(inputs, 'level').values()"
+    "partition_by(inputs, 'lang')['Java']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def partition_entropy_by(inputs, attribute):\n",
     "    partitions = partition_by(inputs, attribute)\n",
     "    return partition_entropy(partitions.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('Senior', [({'level': 'Senior', 'lang': 'Java', 'tweets': 'no', 'phd': 'no'}, False), ({'level': 'Senior', 'lang': 'Java', 'tweets': 'no', 'phd': 'yes'}, False), ({'level': 'Senior', 'lang': 'Python', 'tweets': 'no', 'phd': 'no'}, False), ({'level': 'Senior', 'lang': 'R', 'tweets': 'yes', 'phd': 'no'}, True), ({'level': 'Senior', 'lang': 'Python', 'tweets': 'yes', 'phd': 'yes'}, True)]), ('Mid', [({'level': 'Mid', 'lang': 'Python', 'tweets': 'no', 'phd': 'no'}, True), ({'level': 'Mid', 'lang': 'R', 'tweets': 'yes', 'phd': 'yes'}, True), ({'level': 'Mid', 'lang': 'Python', 'tweets': 'no', 'phd': 'yes'}, True), ({'level': 'Mid', 'lang': 'Java', 'tweets': 'yes', 'phd': 'no'}, True)]), ('Junior', [({'level': 'Junior', 'lang': 'Python1', 'tweets': 'no', 'phd': 'no'}, True), ({'level': 'Junior', 'lang': 'R', 'tweets': 'yes', 'phd': 'no'}, True), ({'level': 'Junior', 'lang': 'R', 'tweets': 'yes', 'phd': 'yes'}, False), ({'level': 'Junior', 'lang': 'Python', 'tweets': 'yes', 'phd': 'no'}, True), ({'level': 'Junior', 'lang': 'Python', 'tweets': 'no', 'phd': 'yes'}, False)])])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "partition_by(inputs, 'level').items()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['level', 'lang', 'tweets', 'phd'])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputs[0][0].keys()"
    ]
   },
   {
@@ -181,23 +224,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_tree(inputs, split_candidates = None):\n",
+    "    if split_candidates is None:\n",
+    "        split_candidates = inputs[0][0].keys()\n",
+    "    \n",
+    "    num_inputs = len(inputs)\n",
+    "    num_trues = len([label for item, label in inputs if label == True])\n",
+    "    num_falses = num_inputs - num_trues\n",
+    "    \n",
+    "    if num_trues == 0: return False\n",
+    "    if num_falses == 0: return True\n",
+    "    \n",
+    "    if not split_candidates:\n",
+    "        return num_trues >= num_fales\n",
+    "    \n",
+    "    find_best_split = min(split_candidates,\n",
+    "                         key = partial(partition_entropy_by, inputs))\n",
+    "    \n",
+    "    partitions = partition_by(inputs, find_best_split)\n",
+    "    \n",
+    "    new_candidates = [i for i in split_candidates]\n",
+    "    \n",
+    "    subtrees = { attribute_value: build_tree(subset, new_candidates)\n",
+    "               for attribute_value, subset in partitions.items()}\n",
+    "    \n",
+    "    subtrees[None] = num_trues > num_falses\n",
+    "    \n",
+    "    return (find_best_split, subtrees)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def classify(tree, input):\n",
+    "    \"\"\"classify the input using the given decision tree\"\"\"\n",
+    "    \n",
+    "    # if this is a leaf node, return its value\n",
+    "    if tree in [True, False]:\n",
+    "        return tree\n",
+    "   \n",
+    "    # otherwise find the correct subtree\n",
+    "    attribute, subtree_dict = tree\n",
+    "    \n",
+    "    subtree_key = input.get(attribute)  # None if input is missing attribute\n",
+    "\n",
+    "    if subtree_key not in subtree_dict: # if no subtree for key,\n",
+    "        subtree_key = None              # we'll use the None subtree\n",
+    "    \n",
+    "    subtree = subtree_dict[subtree_key] # choose the appropriate subtree\n",
+    "    return classify(subtree, input)     # and use it to classify the input\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'hi' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-55ca6286e3e4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mhi\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'hi' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "hi"
+    "classify(build_tree(inputs), {\"level\":'Junior',\n",
+    "                             'lang':'Java',\n",
+    "                             'tweets':'yes',\n",
+    "                             'phd':'no'})"
    ]
   },
   {
@@ -224,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
