--- a/Decision Tree.ipynb
+++ b/Decision Tree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -95,23 +95,79 @@
     {
      "data": {
       "text/plain": [
-       "[({'level': 'Senior', 'lang': 'Java', 'tweets': 'no', 'phd': 'no'}, False),\n",
-       " ({'level': 'Senior', 'lang': 'Java', 'tweets': 'no', 'phd': 'yes'}, False),\n",
-       " ({'level': 'Mid', 'lang': 'Java', 'tweets': 'yes', 'phd': 'no'}, True)]"
+       "defaultdict(list,\n",
+       "            {'Java': [({'level': 'Senior',\n",
+       "                'lang': 'Java',\n",
+       "                'tweets': 'no',\n",
+       "                'phd': 'no'},\n",
+       "               False),\n",
+       "              ({'level': 'Senior',\n",
+       "                'lang': 'Java',\n",
+       "                'tweets': 'no',\n",
+       "                'phd': 'yes'},\n",
+       "               False),\n",
+       "              ({'level': 'Mid', 'lang': 'Java', 'tweets': 'yes', 'phd': 'no'},\n",
+       "               True)],\n",
+       "             'Python': [({'level': 'Mid',\n",
+       "                'lang': 'Python',\n",
+       "                'tweets': 'no',\n",
+       "                'phd': 'no'},\n",
+       "               True),\n",
+       "              ({'level': 'Senior',\n",
+       "                'lang': 'Python',\n",
+       "                'tweets': 'no',\n",
+       "                'phd': 'no'},\n",
+       "               False),\n",
+       "              ({'level': 'Junior',\n",
+       "                'lang': 'Python',\n",
+       "                'tweets': 'yes',\n",
+       "                'phd': 'no'},\n",
+       "               True),\n",
+       "              ({'level': 'Senior',\n",
+       "                'lang': 'Python',\n",
+       "                'tweets': 'yes',\n",
+       "                'phd': 'yes'},\n",
+       "               True),\n",
+       "              ({'level': 'Mid',\n",
+       "                'lang': 'Python',\n",
+       "                'tweets': 'no',\n",
+       "                'phd': 'yes'},\n",
+       "               True),\n",
+       "              ({'level': 'Junior',\n",
+       "                'lang': 'Python',\n",
+       "                'tweets': 'no',\n",
+       "                'phd': 'yes'},\n",
+       "               False)],\n",
+       "             'Python1': [({'level': 'Junior',\n",
+       "                'lang': 'Python1',\n",
+       "                'tweets': 'no',\n",
+       "                'phd': 'no'},\n",
+       "               True)],\n",
+       "             'R': [({'level': 'Junior',\n",
+       "                'lang': 'R',\n",
+       "                'tweets': 'yes',\n",
+       "                'phd': 'no'},\n",
+       "               True),\n",
+       "              ({'level': 'Junior', 'lang': 'R', 'tweets': 'yes', 'phd': 'yes'},\n",
+       "               False),\n",
+       "              ({'level': 'Mid', 'lang': 'R', 'tweets': 'yes', 'phd': 'yes'},\n",
+       "               True),\n",
+       "              ({'level': 'Senior', 'lang': 'R', 'tweets': 'yes', 'phd': 'no'},\n",
+       "               True)]})"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "partition_by(inputs, 'lang')['Java']"
+    "partition_by(inputs, 'lang')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,27 +178,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_items([('Senior', [({'level': 'Senior', 'lang': 'Java', 'tweets': 'no', 'phd': 'no'}, False), ({'level': 'Senior', 'lang': 'Java', 'tweets': 'no', 'phd': 'yes'}, False), ({'level': 'Senior', 'lang': 'Python', 'tweets': 'no', 'phd': 'no'}, False), ({'level': 'Senior', 'lang': 'R', 'tweets': 'yes', 'phd': 'no'}, True), ({'level': 'Senior', 'lang': 'Python', 'tweets': 'yes', 'phd': 'yes'}, True)]), ('Mid', [({'level': 'Mid', 'lang': 'Python', 'tweets': 'no', 'phd': 'no'}, True), ({'level': 'Mid', 'lang': 'R', 'tweets': 'yes', 'phd': 'yes'}, True), ({'level': 'Mid', 'lang': 'Python', 'tweets': 'no', 'phd': 'yes'}, True), ({'level': 'Mid', 'lang': 'Java', 'tweets': 'yes', 'phd': 'no'}, True)]), ('Junior', [({'level': 'Junior', 'lang': 'Python1', 'tweets': 'no', 'phd': 'no'}, True), ({'level': 'Junior', 'lang': 'R', 'tweets': 'yes', 'phd': 'no'}, True), ({'level': 'Junior', 'lang': 'R', 'tweets': 'yes', 'phd': 'yes'}, False), ({'level': 'Junior', 'lang': 'Python', 'tweets': 'yes', 'phd': 'no'}, True), ({'level': 'Junior', 'lang': 'Python', 'tweets': 'no', 'phd': 'yes'}, False)])])"
+       "dict_items([('Java', [({'level': 'Senior', 'lang': 'Java', 'tweets': 'no', 'phd': 'no'}, False), ({'level': 'Senior', 'lang': 'Java', 'tweets': 'no', 'phd': 'yes'}, False), ({'level': 'Mid', 'lang': 'Java', 'tweets': 'yes', 'phd': 'no'}, True)]), ('Python', [({'level': 'Mid', 'lang': 'Python', 'tweets': 'no', 'phd': 'no'}, True), ({'level': 'Senior', 'lang': 'Python', 'tweets': 'no', 'phd': 'no'}, False), ({'level': 'Junior', 'lang': 'Python', 'tweets': 'yes', 'phd': 'no'}, True), ({'level': 'Senior', 'lang': 'Python', 'tweets': 'yes', 'phd': 'yes'}, True), ({'level': 'Mid', 'lang': 'Python', 'tweets': 'no', 'phd': 'yes'}, True), ({'level': 'Junior', 'lang': 'Python', 'tweets': 'no', 'phd': 'yes'}, False)]), ('Python1', [({'level': 'Junior', 'lang': 'Python1', 'tweets': 'no', 'phd': 'no'}, True)]), ('R', [({'level': 'Junior', 'lang': 'R', 'tweets': 'yes', 'phd': 'no'}, True), ({'level': 'Junior', 'lang': 'R', 'tweets': 'yes', 'phd': 'yes'}, False), ({'level': 'Mid', 'lang': 'R', 'tweets': 'yes', 'phd': 'yes'}, True), ({'level': 'Senior', 'lang': 'R', 'tweets': 'yes', 'phd': 'no'}, True)])])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "partition_by(inputs, 'level').items()"
+    "partition_by(inputs, 'lang').items()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +207,7 @@
        "dict_keys(['level', 'lang', 'tweets', 'phd'])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +226,7 @@
      "output_type": "stream",
      "text": [
       "level 0.6935361388961919\n",
-      "lang 0.8601317128547441\n",
+      "lang 0.8221267860233527\n",
       "tweets 0.7884504573082896\n",
       "phd 0.8921589282623617\n"
      ]
@@ -183,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +341,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('level',\n",
+       " {'Senior': ('tweets', {'no': False, 'yes': True, None: False}),\n",
+       "  'Mid': True,\n",
+       "  'Junior': ('phd', {'no': True, 'yes': False, None: True}),\n",
+       "  None: True})"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "build_tree(inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -294,24 +374,15 @@
        "True"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "classify(build_tree(inputs), {\"level\":'Junior',\n",
-    "                             'lang':'Java',\n",
-    "                             'tweets':'yes',\n",
-    "                             'phd':'no'})"
+    "classify(build_tree(inputs),{\"level\":'intern'\n",
+    "                            })"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -330,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
